--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 			</div>
 			<div class="two">
 				<div class="images-two">
-					<img src="images/skate-1.JPG">
-					<img class="ss" src="images/skate-2.JPG">
+					<img src="images/skate-1.jpg">
+					<img class="ss" src="images/skate-2.jpg">
 				</div>
 			</div>
 			<div class="three">
